<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_garden"
        android:icon="@drawable/ic_garden_black"
        android:title="@string/title_garden" />

    <item
        android:id="@+id/navigation_plants"
        android:icon="@drawable/ic_plants_black"
        android:title="@string/title_plants" />

    <item
        android:id="@+id/navigation_social"
        android:icon="@drawable/ic_social_black"
        android:title="@string/title_social" />

    <item
        android:id="@+id/navigation_market"
        android:icon="@drawable/ic_market_black"
        android:title="@string/title_market" />

</menu>
