<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.widou.apk.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_garden"
        android:name="com.widou.apk.ui.notifications.NotificationsFragment"
        android:label="@string/title_garden"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_plants"
        android:name="com.widou.apk.ui.notifications.NotificationsFragment"
        android:label="@string/title_plants"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_social"
        android:name="com.widou.apk.ui.notifications.NotificationsFragment"
        android:label="@string/title_social"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_market"
        android:name="com.widou.apk.ui.notifications.NotificationsFragment"
        android:label="@string/title_market"
        tools:layout="@layout/fragment_notifications" />
</navigation>